# fresh-lab-web-site

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CONTRIBUTING.md  DEPLOYMENT.md  INVESTIGATION.md  README.md  ROADMAP.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml  phase.yml  roadmap_task.yml
.github/workflows/: pages.yml  test.yml
content/: README.md  people.json  projects.json  publications.json  site.json  wordpress-pages.json
content/project-stubs/: README.md  badc.md  can-commercial-thinning-help-mitigate-the-midterm-timber-supply-shortage.md  cccandies.md  clews-c2070-nrcan.md  dbh-distfit-papers.md  fable-pyculator.md  femic.md  fhops.md  figrecover.md  fresh-hectaresbc.md  gnss-area-cover-validation-whole-tree-logging.md  hemlock-dwarf-mistletoe-spread-modelling.md  ignitebc-flashforest-drone-seeding-microsite-ml.md  jamie-iversen-msc-thesis.md  jinming-jimmy-ke-msc-thesis.md  (+13 more)
planning/: README.md  dev-container-maintainer-workflow.md  fresh-branding-assets.md  github-pages-redirect-runbook.md  phase-1-public-launch-verification.md  phase-3-asset-inventory.md  phase-3-visual-qa.md  phase-6-content-depth-plan.md  site-launch-announcements.md  static-site-migration-plan.md  ubc-cms-temporary-redirects.md
scripts/: build.py  check_published_site.py  check_ubc_redirects.py  extract_wordpress_public_content.py  harvest_basecamp_projects.py  harvest_cv_research_record.py  harvest_google_scholar_publications.py  harvest_orcid_publications.py  prepare_assets.py  qa_content.py
src/: styles.css
tests/: test_build.py
