[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fresh-lab-web-site"
version = "0.1.0"
description = "Static site migration scaffold for the UBC FRESH lab website."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8"
]
quality = [
  "ruff>=0.8"
]
test = [
  "pytest>=8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["dist", "tmp"]
